--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fecha": "^4.2.3",
     "octokit": "^2.0.4",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
